Update PerfMainTest for image name package structure
Bug: 349915224
Test: tests updated
Change-Id: Idb8a2ec1f13c0cb501c51f7c86b7da71b7a1fdd0